Fix: Fixed broken layout on info dialog element when updating group info.

--- a/src/components/input-errors/InputErrors.module.css
+++ b/src/components/input-errors/InputErrors.module.css
@@ -18,15 +18,15 @@
     }
 }
 
-.input-errors::after {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-image: linear-gradient(to right,
-            var(--light-dark-background),
-            transparent 10% 90%,
-            var(--light-dark-background));
-}
+/* .input-errors::after { */
+/*     content: ""; */
+/*     width: 100%; */
+/*     height: 100%; */
+/*     position: absolute; */
+/*     top: 0; */
+/*     left: 0; */
+/*     background-image: linear-gradient(to right, */
+/*             var(--light-dark-background), */
+/*             transparent 10% 90%, */
+/*             var(--light-dark-background)); */
+/* } */
